force-app/main/default/objects/SurveyInvitation/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <formula>TEXT(Case__r.SCC_Case_Category__c)</formula>
    <label>Case Category</label>
    <type>Text</type>
</CustomField>