force-app/main/default/objects/SurveyInvitation/fields/Case_type_number_survey__c.field-meta.xml
<CustomField>
    <fullName>Case_type_number_survey__c</fullName>
    <formula>Case__r.SCC_Call_Type__r.Name</formula>
    <label>Case type number survey</label>
    <type>Text</type>
</CustomField>