force-app/main/default/objects/SurveyInvitation/fields/Count_Response__c.field-meta.xml
<CustomField>
    <fullName>Count_Response__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>