force-app/main/default/objects/SurveyInvitation/fields/Kantor_Cabang__c.field-meta.xml
<CustomField>
    <fullName>Kantor_Cabang__c</fullName>
    <formula>Responden__r.SCC_Sub_Area_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kantor Cabang</label>
    <type>Text</type>
</CustomField>