force-app/main/default/objects/SurveyInvitation/fields/Reigon__c.field-meta.xml
<CustomField>
    <fullName>Reigon__c</fullName>
    <formula>Responden__r.SCC_Area_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>