force-app/main/default/objects/SurveyInvitation/fields/Responden__c.field-meta.xml
<CustomField>
    <fullName>Responden__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responden</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>