force-app/main/default/objects/SurveyInvitation/fields/Survey_Question_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Question Response</label>
    <referenceTo>SurveyQuestionResponse</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>