force-app/main/default/objects/SurveyInvitation/fields/Survey_Site_CCT__c.field-meta.xml
<CustomField>
    <fullName>Survey_Site_CCT__c</fullName>
    <formula>Case__r.Site_CCT__c</formula>
    <label>Survey Site CCT</label>
    <type>Text</type>
</CustomField>