force-app/main/default/objects/SurveyInvitation/fields/User_CCT__c.field-meta.xml
<CustomField>
    <fullName>User_CCT__c</fullName>
    <formula>Case__r.CreatedBy.Username</formula>
    <label>User CCT</label>
    <type>Text</type>
</CustomField>